[package]
name = "fast_aug"
description = "Fast data augmentation for text"
authors = ["Konstantin Chernyshev <kdchernyshev@gmail.com>"]
readme = "./README.md"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/k4black/fast-aug"
repository = "https://github.com/k4black/fast-aug"
documentation = "https://docs.rs/fast-aug"

exclude = [ "rust-toolchain", "target/*", "Cargo.lock", "benches/*.txt", "benches/*.json", "data/*" ]


[lib]
name = "fast_aug"
path = "src/lib.rs"
bench = false


[dependencies]
lazy_static = "1.4"
rand = "0.8"
rand_distr = "0.4"
regex = "1.10"
unicode-segmentation = "1.10"  # think about moving to https://crates.io/crates/finl_unicode
#pyo3 = { version = "0.20", features = ["extension-module"] }

[dev-dependencies]
test-case = "3.3"
criterion = "0.5"
grcov = "0.8"


[[bench]]
name = "text"
harness = false
