[package]
name = "fast_aug"
description = "Fast data augmentation for text"
authors = ["Konstantin Chernyshev <kdchernyshev@gmail.com>"]
readme = "./README.md"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/k4black/fast-aug"
repository = "https://github.com/k4black/fast-aug"
documentation = "https://docs.rs/fast-aug"

exclude = [ "rust-toolchain", "target/*", "Cargo.lock", "benches/*.txt", "benches/*.json", "data/*", "testdata/*" ]


[lib]
name = "fast_aug"
path = "src/lib.rs"
bench = false


[dependencies]
lazy_static = "1.4"
rand = "0.8"
rand_distr = "0.4"
regex = "1.10"
unicode-segmentation = "1.10"  # think about moving to https://crates.io/crates/finl_unicode
finalfusion = "0.18"
icu_locid = "1.4"
icu_properties = "1.4"
icu_provider = "1.4"
serde = "1.0"
serde_json = "1.0"
flate2 = "1.0"
#pyo3 = { version = "0.20", features = ["extension-module"] }

[build-dependencies]
flate2 = "1.0"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
test-case = "3.3"
criterion = "0.5"


[[bench]]
name = "text"
harness = false
