[package]
name = "fast_aug_python"
description = "Fast data augmentation for text"
authors = ["Konstantin Chernyshev <kdchernyshev@gmail.com>"]
readme = "./README.md"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/k4black/fast-aug"
repository = "https://github.com/k4black/fast-aug"
documentation = "https://github.com/k4black/fast-aug"

exclude = [ "rust-toolchain", "target/*", "Cargo.lock", "benches/*.txt", "benches/*.json", "data/*", "testdata/*", "__pycache__/*", ".*_cache", "*.so" ]


[lib]
name = "fast_aug"
path = "src/lib.rs"
bench = false
crate-type = ["cdylib"]  # downstream rust code, forbidden to "use fast-aug-python" directly


[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
fast_aug = { path = "../../fast_aug" }
rand = { version = "0.8", features = [] }

#[dev-dependencies]
#tempfile = "3.8"
#pyo3 = { version = "0.20", features = ["auto-initialize"] }


[profile.dev]
split-debuginfo = "unpacked"
